--- a/Assignment1/Assigment1.ipynb
+++ b/Assignment1/Assigment1.ipynb
@@ -123,8 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "Meshplot requires per vertex normals, so we need to \"explode\" the mesh"
+    "Pyvista requires per vertex normals, so we need to \"explode\" the mesh"
    ]
   },
   {
@@ -155,20 +154,6 @@
    "metadata": {},
    "source": [
     "### Per-vertex Shading"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Per-corner Shading"
    ]
   },
   {
